<resources>
    <string name="app_name">ATM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sobre">sobre</string>
    <string name="menu_CLIENTE">Clientes</string>
    <string name="menu_PRICIPAL">principal</string>
    <string name="menu_CONTATOS">Contatos</string>
    <string name="menu_sErvisos">Servisos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>