<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_pricipal">

    <fragment
        android:id="@+id/nav_pricipal"
        android:name="com.example.atm.pricinpal.principalFragment"
        android:label="@string/menu_PRICIPAL"
        tools:layout="@layout/fragment_principal" />
    <fragment
        android:id="@+id/nav_servisos"
        android:name="com.example.atm.servisos.esrvisosFragment"
        android:label="@string/menu_sErvisos"
        tools:layout="@layout/fragment_principal" />
    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.example.atm.clientes.clenteFragment"
        android:label="@string/menu_CLIENTE"
        tools:layout="@layout/fragment_clente" />
    <fragment
        android:id="@+id/nav_contatos"
        android:name="com.example.atm.contato.contatoFragment"
        android:label="@string/menu_CONTATOS"
        tools:layout="@layout/fragment_contato" />
    <fragment
        android:id="@+id/nav_SOBRE"
        android:name="com.example.atm.sobre.sobreFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/fragment_sobre" />




</navigation>